# rag-test

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  rag_service.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: document-upload.tsx  rag-query.tsx
