[project]
name = "rag-project"
version = "0.1.0"
description = "RAG project using LangChain, Qdrant, and OpenAI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "langchain>=0.1.4",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.16",
    "qdrant-client>=1.7.3",
    "openai>=1.10.0",
    "tiktoken>=0.5.2",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
